shaku_derive/tests/ui/duplicate_service_attribute.stderr
error: Duplicate attribute
  --> $DIR/duplicate_service_attribute.rs:12:31
   |
12 |         components = [#[lazy] #[lazy] ComponentImpl],
   |                               ^
